force-app/main/default/objects/Purchase__c/fields/ClientId__c.field-meta.xml
<CustomField>
    <fullName>ClientId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Client ID</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Purchases</relationshipLabel>
    <relationshipName>Purchases</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>