force-app/main/default/objects/Purchase__c/fields/GrandTotal__c.field-meta.xml
<CustomField>
    <fullName>GrandTotal__c</fullName>
    <label>Grand Total</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>